@@ -1,10 +1,0 @@
-DEFINED_PHASES=install prepare
-DESCRIPTION=Raspberry PI precompiled kernel and modules
-EAPI=5
-HOMEPAGE=https://github.com/raspberrypi/firmware
-KEYWORDS=~arm -*
-LICENSE=GPL-2
-RESTRICT=binchecks mirror strip
-SLOT=3.11.2_pre-r20130926
-SRC_URI=https://dev.gentoo.org/~xmw/raspberrypi-image/raspberrypi-image-3.11.2_pre-r20130926.tar.xz
-_md5_=60c0a3c6667982c644cc2ec89dafcb41
